# dapol

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  entities_example.csv  secrets_example.toml  test.json  test.toml  tree_config_example.toml
.github/workflows/: ci.yml
benches/: bench_data.csv  build_tree.rs  criterion_benches.rs  dapol.rs  data.rs  env_vars.rs  heuristic_func.rs  heuristic_func_examples.rs  inputs.rs  large_input_benches.rs  manual_benches.rs  memory_measurement.rs  memory_usage_estimation.rs  setup.rs  utils.rs
benches/memory_usage_estimation/: bench_data.csv  plane_of_best_fit.py
benches/results/: bench_results.md
benches/results/memory/: original_bench_data.csv  r7a.32xlarge_memory.csv  r7a.4xlarge_memory.csv
benches/setup/: mod.rs
examples/: entities_example.csv  tree_config_example.toml
examples/ndm_smt/: accumulator_config_parser.rs  inclusion_proof_handling.rs  main.rs  ndm_smt_builder.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: max_nodes_to_store.rs
resources/: tree_config_example.toml
src/: accumulators.rs  binary_tree.rs  cli.rs  entity.rs  errors.rs  hasher.rs  inclusion_proof.rs  kdf.rs  lib.rs  main.rs  max_thread_count.rs  node_content.rs  node_types.rs  percentage.rs  primitives.rs  read_write_utils.rs  secret.rs  test_utils.rs  testing_utils.rs  tests.rs  tree.rs  user.rs  utils.rs
src/accumulators/: config.rs  ndm_smt.rs
src/accumulators/ndm_smt/: config.rs  ndm_smt_config.rs  ndm_smt_secrets.rs  ndm_smt_secrets_parser.rs  secrets.rs  secrets_parser.rs  x_coord_generator.rs
src/binary_tree/: binary_tree_path.rs  builder.rs  dapol_node.rs  height.rs  multi_threaded_builder.rs  path.rs  path_builder.rs  path_siblings.rs  single_threaded_builder.rs  sparse_binary_tree.rs  test_utils.rs  tree_builder.rs  utils.rs
src/binary_tree/builder/: multi_threaded.rs  single_threaded.rs
src/binary_tree/tree_builder/: multi_threaded.rs  single_threaded.rs
src/dapol/: mod.rs  node.rs  tests.rs
src/entity/: entities_parser.rs  entity_ids_parser.rs
src/inclusion_proof/: aggregated_range_proof.rs  aggregation_factor.rs  individual_range_proof.rs
src/node_content/: compressed_node.rs  full_node.rs  hidden_node.rs
src/node_types/: compressed_node.rs
src/proof/: mod.rs  node.rs  tests.rs
src/range/: mod.rs  padding.rs  splitting.rs
src/tree/: binary_tree_path.rs  dapol_node.rs  errors.rs  inclusion_proof.rs  sparse_binary_tree.rs
