[package]
name = "dapol"
version = "0.1.0"
authors = ["Stenton Mayne <stentonian@protonmail.com>"]
edition = "2021"
description = "DAPOL+ Proof of Liabilities protocol in Rust"

[lib]
bench = false

[dependencies]

# legacy

smtree = "0.1.2"
blake2 = "0.9.0"

# current

primitive-types = { version = "0.12.1", features = ["serde"] } # H256 & U256 (I think parity uses this so maybe we just use that crate instead)

# crypto
rand = "0.8.5"
blake3 = "0.3.8"
digest = "0.9.0"
bulletproofs = "4.0.0"
merlin = "3.0.0" # Transcript is required by bulletproofs library
curve25519-dalek-ng = "4.1.1"
hkdf = "0.12.3"
sha2 = "0.10.8"

# concurrency
thiserror = "1.0"
displaydoc = "0.2"
rayon = "1.7.0"
dashmap = { version = "5.5.3", features = ["serde"] }

# logging
env_logger = "0.10.0"
log = "0.4.20"
logging_timer = "1.1.0"

# cli
clap = { version = "4.4.6", features = ["derive", "string"] }
clap-verbosity-flag = "2.0.1"
patharg = "0.3.0"

# files & serialization
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"
csv = "1.3.0"
serde_bytes = "0.11.12"
bincode = "1.3.3"
chrono = "0.4.31"
derive_builder = "0.12.0"
serde_json = "1.0.107"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "dapol"
harness = false
