[package]
name = "dapol"
version = "0.2.0"
authors = ["Stenton Mayne <stentonian@protonmail.com>"]
edition = "2021"
description = "DAPOL+ Proof of Liabilities protocol"
license = "MIT"
repository = "https://github.com/silversixpence-crypto/dapol"
categories = ["cryptography"]
keywords = [
    "cryptography",
    "crypto",
    "zero-knowledge",
    "bulletproofs",
    "cli"
]

# This enables Latex for the docs.
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex-header.html",
]

[lib]
bench = false

[dependencies]

primitive-types = { version = "0.12.1", features = ["serde"] } # H256 & U256 (I think parity uses this so maybe we just use that crate instead)

# crypto
rand = "0.8.5"
hkdf = "0.12.3"
sha2 = "0.10.8"
blake3 = "1.5.0"
digest = "0.10.7"
merlin = "3.0.0" # Transcript is required by bulletproofs library
bulletproofs = "4.0.0"
curve25519-dalek-ng = "4.1.1"

# concurrency
thiserror = "1.0"
displaydoc = "0.2"
rayon = "1.7.0"
dashmap = { version = "5.5.3", features = ["serde"] }

# logging
env_logger = "0.10.0"
log = "0.4.20"
logging_timer = "1.1.0"

# cli
clap = { version = "4.4.6", features = ["derive", "string"] }
clap-verbosity-flag = "2.0.1"
patharg = "0.3.0"

# files & serialization
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"
csv = "1.3.0"
serde_bytes = "0.11.12"
bincode = "1.3.3"
chrono = "0.4.31"
derive_builder = "0.12.0"

# fuzzing
arbitrary = { version = "1", optional = true, features = ["derive"] }

[features]
fuzzing = ["rand/small_rng", "arbitrary"]

[dev-dependencies]
criterion = "0.5.0"
jemalloc-ctl = "0.5.4"
jemallocator = "0.5.4"
sysinfo = "0.29.11"
statistical = "1.0.0"
once_cell = "1.18.0"
chrono = "0.4.31"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "criterion_benches"
harness = false

[[bench]]
name = "manual_benches"
harness = false

[profile.bench]
debug = true
